枚举实现单例模式代码实现。 文档编写。

--- a/Document/Markdown File/单例模式详解.md
+++ b/Document/Markdown File/单例模式详解.md
@@ -255,19 +255,77 @@ public synchronized static Singleton getEntity() {
 ## 枚举实现单例模式（完美解决线程安全和序列化问题）
 
 ```java
-public enum  Singleton {
-    INSTANCE;
+public enum  Singleton implements Serializable {
+
+    SINGLETON;
+
+    //定义实例
+    private  MySingleton entity;
+
+    //枚举类的构造方法在类加载的时候被实例化
     Singleton() {
+        //new一个单例类对象作为枚举的域
+        entity = new MySingleton();
+    }
+	//提供一个公共的获取枚举的域对象（即单例类对象）的方法
+    public MySingleton getEntity() {
+        return entity;
+    }
+
+    //需要实现单例的类
+    class MySingleton{
+        public MySingleton(){
+
+        }
     }
 }
 ```
 
 这种方式是Effective Java作者推荐的一种方式，这样既可以避免多线程安全问题，又可以防止反序列化重新创建新的对象。
 
+枚举对象是在类初始化的时候被加载的，所以是线程安全的。同时，Java在枚举类的序列化和反序列化的时候又做了特殊规定，JVM可以保证序列化的安全性。
+
+下面是以一种优雅的方式来实现单例模式：
+
+```java
+public class SingletonFactory {
+
+    /*实现一个枚举类，域为单例类对象*/
+    private enum SingletonEnum {
+        SINGLETON;
+        private Singleton singleton;
+        /*实现一个构造器，在初始化枚举的时候加载这个域，即单例类的实例化对象*/
+        SingletonEnum() {
+            singleton = new Singleton();
+        }
+        /*获取枚举域信息的get方法*/
+        public Singleton getSingleton() {
+            return singleton;
+        }
+    }
+
+    /*实现一个获取单例类对象的静态方法*/
+    public static Singleton getSingletonByFactory() {
+        return SingletonEnum.SINGLETON.getSingleton();
+    }
+}
+
+/*实现单例的类*/
+class Singleton {
+    /*单例类的构造器*/
+    public Singleton() {
+
+    }
+}
+```
+
+上述实现方式，将枚举类隐藏在工厂类的内部，隐藏了枚举类的实现，实现了`职责单一的原则` 。当我们想获取单例类的实例时，只需要通过`SingletonFactory.getSingletonByFactory()` 工厂类的静态方法即可获取。
+
 ## 总结
 
 1. 实现线程安全的单例模式，可以使用饿汉式、静态内部类、静态代码块、双重锁检查机制等
 2. 序列化会破坏类的单例模式特性，可以通过在单例类中加入`readResolve()`方法来实现单例，或者使用枚举实现单例模式也可避免序列化带来的问题。 
+3. 饿汉式和枚举的实现方法本质上都是利用了类在加载过程的初始化来保证线程安全。
 
 ## 参考文章
 
