--- a/Document/Markdown File/工厂模式详解.md
+++ b/Document/Markdown File/工厂模式详解.md
@@ -2,9 +2,209 @@
 
 ##简单工厂模式
 
+简单工厂模式需要三个角色：
 
+1. 抽象产品：指的是工厂类创建的产品对象的公共父类，包含了这个产品的一些公有属性和方法。如下：
+
+   ```java
+   public abstract class Product {
+
+       private String procuctName;
+
+       protected String Attributes;
+
+       public abstract String getProductName();
+
+       public abstract String getAttributes();
+
+       /*所有产品的公共方法*/
+       public void setPubMethod(){
+           this.Attributes = "attributes";
+       }
+   }
+   ```
+
+2. 具体产品：被工厂类所创建的对象的类，每个类都继承自抽象产品这个父类，在自己的类中实现具体产品的私有定制方法。如下：
+
+   ```java
+   public class ProductA extends Product {
+       @Override
+       public String getProductName() {
+           return "ProductA";
+       }
+
+       @Override
+       public String getAttributes() {
+           return this.Attributes;
+       }
+   }
+   ```
+
+   上述代码中的`ProductA`实现了父类中定义的抽象方法，并且可以实现自己定制的方法。
+
+3. 工厂类：工厂类是简单工厂模式最主要的类，负责创建不同类型的产品。内部有个静态的创建产品对象的方法，返回的数据类型为抽象产品的数据类型。如下：
+
+   ```java
+   public class SimpleFactory {
+
+       public static Product createProduct(String name) {
+           switch (name) {
+               case "A":
+                   ProductA a = new ProductA();
+                   a.setPubMethod();
+                   return a;
+               case "B":
+                   ProductB b = new ProductB();
+                   b.setPubMethod();
+                   return b;
+               default:
+                   return null;
+           }
+       }
+
+   }
+   ```
+
+   上述代码，返回的数据类型为`Product`，创建对象的方法`createProduct`为静态方法。  
+
+上面的即是简单工厂模式的三种角色，下面我们来看如何使用简单工厂模式：
+
+```java
+public class ClientUser {
+
+    public static void main(String[] args) {
+        /*使用工厂方法创建对象*/
+        Product product = SimpleFactory.createProduct("A");
+        /*调用产品的公用方法*/
+        product.setPubMethod();
+        /*调用产品A的私有方法*/
+        String attributes = product.getAttributes();
+        String productName = product.getProductName();
+    }
+}
+```
+
+看到上述使用方式，我们会发现，当我们换一个产品对象的时候，需要修改客户端使用代码，如果我们将想要创建的产品对象类型放到xml文件中，再通过解析xml文件来获取产品类型，这样在使用的时候，想换个产品对象的话就不需要更改客户端代码了，我们只需要修改xml文件名即可。详细使用方式可以参考下面参考文章中的博客。
+
+### 简单工厂模式存在的问题
+
+1. 在新增产品的时候，需要修改工厂类，不符合“开闭原则”（对扩展开放，对修改封闭）。
+2. 当产品很多的时候，工厂类会变得特别庞大复杂，难以维护。
 
 ## 工厂方法模式
 
+工厂方法模式包含了以下几个角色：
+
+1. 抽象产品：工厂所创建产品对象的公共父类。
+
+   ```java
+   public abstract class Product {
+
+       private String procuctName;
+
+       protected String Attributes;
+
+       public abstract String getProductName();
+
+       public abstract String getAttributes();
+
+       /*所有产品的公共方法*/
+       public void setPubMethod(){
+           this.Attributes = "attributes";
+       }
+   }
+   ```
+
+   与简单工厂模式中的抽象产品相同。
+
+2. 具体产品：抽象产品的子类或者实现类，具体产品类型由与之对应的具体工厂类创建，具体工厂与具体产品之间一一对应。
+
+   ```java
+   public class ProductB extends Product {
+       @Override
+       public String getProductName() {
+           return "ProductB";
+       }
+
+       @Override
+       public String getAttributes() {
+           return this.Attributes;
+       }
+   }
+   ```
+
+   ​
+
+3. 抽象工厂：负责声明创造产品对象的工厂方法，抽象工厂可以是接口，也可以是抽象类或者具体的类。
+
+   ```java
+   /**
+    * 抽象工厂
+    */
+   public interface AbsFactory {
+       Product createProduct();
+   }
+
+   ```
+
+   ​
+
+4. 具体工厂：一个具体产品对应一个具体工厂，具体工厂继承或实现抽象工厂类，负责创建具体产品对象，还可以做一些初始化等操作。客户端通过使用具体工厂来创建具体产品对象。
+
+   ```java
+   public class SpecificFacoryB implements AbsFactory {
+       @Override
+       public Product createProduct() {
+           return new ProductB();
+       }
+   }
+   ```
+
+下面来看具体的工厂方法模式使用：
+
+```java
+public class SpecificClientUser {
+    public static void main(String[] args) {
+        /*使用抽象工厂类接受具体工厂类创建的对象，创建哪种具体工厂类可以通过配置文件的方式实现*/
+        AbsFactory factory = new SpecificFacoryB();
+        /*工厂方法创建产品对象*/
+        Product product = factory.createProduct();
+        /*调用产品公共方法*/
+        product.setPubMethod();
+        /*调用产品私有方法*/
+        product.getAttributes();
+
+    }
+}
+```
+
+### 工厂方法模式存在的问题
+
+1. 当需要新增一个产品的时候，需要新增一个具体产品对应的具体工厂类，这样使得类的个数成对增加，增加了系统的复杂性和运维成本
+2. 同一种风格的不同产品一起使用时，由于客户端需要使用不同的工厂来创建这些不同的产品，所以如果某个产品的风格使用错误可能会导致一些问题。虽然可以通过增加一些约束来实现，但是那样会导致客户端的代码或配置文件变得复杂
+
 ## 抽象工厂模式
+
+抽象工厂模式涉及到一个产品族和产品等级结构的概念。简单来说，为了解决工厂方法模式中存在的“风格问题”，我们将不同的产品按照“风格”分类，同一种“风格”的产品叫做一个产品族。
+
+> (1) 产品等级结构：产品等级结构即产品的继承结构，如一个抽象类是电视机，其子类有海尔电视机、海信电视机、TCL电视机，则抽象电视机与具体品牌的电视机之间构成了一个产品等级结构，抽象电视机是父类，而具体品牌的电视机是其子类。
+>
+> (2) 产品族：在抽象工厂模式中，产品族是指由同一个工厂生产的，位于不同产品等级结构中的一组产品，如海尔电器工厂生产的海尔电视机、海尔电冰箱，海尔电视机位于电视机产品等级结构中，海尔电冰箱位于电冰箱产品等级结构中，海尔电视机、海尔电冰箱构成了一个产品族。
+
+![产品等级结构、产品族与具体工厂的示意图](/pic/微信截图_20180413193514.png)
+
+如上图所示，在抽象工厂模式中，一个具体工厂创造的是“相同风格”的一组不同的产品，即不同等级结构的相关联的一个产品族。而在工厂方法模式中，一个具体工厂创造的是一个等级结构的一个产品。当一个具体工厂可以创造出多个等级结构的产品时，抽象工厂模式比工厂方法模式更加的简单、高效。如上如所示的结构，如果使用工厂方法模式则需要15个具体工厂类，但是使用抽象工厂模式则只需要5个具体工厂类即可。
+
+抽象工厂中也包含着下面这几个角色：
+
+1. 抽象工厂：定义了一组创建不同等级结构的产品的方法。
+2. 具体工厂：实现了抽象工厂中定义的方法，创造出一组不同等级结构的产品族。
+3. 抽象产品：为每个产品提供一个公共的属性、钩子方法，每个等级结构的产品都是它的子类。
+4. 具体产品：实现了抽象产品定义的钩子方法，也可以拥有自己的私有属性和方法。
+
+
+
+## 参考文章
+
+[简单工厂模式](https://gof.quanke.name/%E7%AE%80%E5%8D%95%E5%B7%A5%E5%8E%82%E6%A8%A1%E5%BC%8F-Simple%20Factory%20Pattern.html)
 
