外观模式详解.md 编写完成 工厂模式详解.md 编写完成

--- a/Document/Markdown File/工厂模式详解.md
+++ b/Document/Markdown File/工厂模式详解.md
@@ -198,9 +198,149 @@ public class SpecificClientUser {
 抽象工厂中也包含着下面这几个角色：
 
 1. 抽象工厂：定义了一组创建不同等级结构的产品的方法。
+
+   ```java
+   public abstract class AbsFactory {
+       /*抽象工厂类，定义了一个产品工厂需要创建的产品族*/
+       public abstract ProductC createProductC();
+       public abstract ProductD createProductD();
+
+   }
+   ```
+
 2. 具体工厂：实现了抽象工厂中定义的方法，创造出一组不同等级结构的产品族。
+
+   ```java
+   /**
+    * 创建数字1风格的不同产品
+    * 即不同等级结构的相关联的一个产品族
+    */
+   public class SpecificFactory1 extends AbsFactory {
+
+       /*创建产品C1*/
+       @Override
+       public ProductC createProductC() {
+           return new ProductC1();
+       }
+       /*创建产品D1*/
+       @Override
+       public ProductD createProductD() {
+           return new ProductD1();
+       }
+   }
+   ```
+
+   ```java
+   /**
+    * 创建数字2风格的一组不同产品
+    * 即不同等级结构的相关联的一个产品族
+    */
+   public class SpecificFactory2 extends AbsFactory {
+
+       /*创建产品C2*/
+       @Override
+       public ProductC createProductC() {
+           return new ProductC2();
+       }
+       /*创建产品D2*/
+       @Override
+       public ProductD createProductD() {
+           return new ProductD2();
+       }
+   }
+   ```
+
+   ​
+
 3. 抽象产品：为每个产品提供一个公共的属性、钩子方法，每个等级结构的产品都是它的子类。
+
+   ```java
+   public abstract class ProductC {
+
+       private String procuctName;
+
+       protected String Attributes;
+
+       public abstract String getProductName();
+
+       public abstract String getAttributes();
+
+       /*所有产品的公共方法*/
+       public void setPubMethod(){
+           this.Attributes = "attributes";
+       }
+   }
+   ```
+
+   ```java
+   public abstract class ProductD {
+
+       private String procuctName;
+
+       protected String Attributes;
+
+       public abstract String getProductName();
+
+       public abstract String getAttributes();
+
+       /*所有产品的公共方法*/
+       public void setPubMethod(){
+           this.Attributes = "attributes";
+       }
+   }
+   ```
+
+   C和 D两种不同类型的抽象产品
+
 4. 具体产品：实现了抽象产品定义的钩子方法，也可以拥有自己的私有属性和方法。
+
+   ```java
+   public class ProductC1 extends ProductC {
+
+       @Override
+       public String getProductName() {
+           return "ProductC1";
+       }
+
+       @Override
+       public String getAttributes() {
+           return this.Attributes;
+       }
+   }
+   ```
+
+   ```java
+   public class ProductD2 extends ProductD{
+
+       @Override
+       public String getProductName() {
+           return "ProductD2";
+       }
+
+       @Override
+       public String getAttributes() {
+           return this.Attributes;
+       }
+   }
+   ```
+
+   与上面两个类似的具体产品还有C2和D1，都是基础自C或D的不同等级结构的产品。
+
+   接下来看客户端的使用：
+
+   ```java
+   public class AbsClientUser {
+       public static void main(String[] args) {
+           SpecificFactory1 sp1 = new SpecificFactory1();
+           /*客户端使用时不需要关心C和D是否是同一种风格，
+           只要使用父类来接收产品对象，并且使用就可以了*/
+           ProductD productD = sp1.createProductD();
+           ProductC productC = sp1.createProductC();
+       }
+   }
+   ```
+
+   我们在实际使用过程中也可通过xml文件配置的方式来实现，更换工厂类而不改变代码。
 
 
 
