--- a/Document/Markdown File/外观模式详解.md
+++ b/Document/Markdown File/外观模式详解.md
@@ -103,6 +103,80 @@
 
    根据上述代码运行结果我们可以看到，实际上完成整个车制造这种类型的业务可能在很多地方都会用到，而在这里我们通过一个外观类将每个制造子系统封装到一起，提供给客户类调用，这样会简单很多。客户类也不需要关心这些类之间的关系和调用步骤之类的。
 
+## 外观模式存在的问题
+
+由上述介绍，我们可以看到，当我们需要新增、删除或更换与外观类交互的子系统类时，我们需要修改外观类的代码，甚至涉及到修改客户类的代码，这就违背了开闭原则。
+
+## 抽象外观模式
+
+为了解决上述问题，我们可以引入一层抽象外观类，让客户类面向抽象外观类编程。这样当我们新增或者修改了一个子系统，客户类需要使用新的子系统时，就再新增一个外观模式实现类，客户类通过使用配置文件的方式来修改使用哪种外观模式实现类，这样就可以达到不修改客户类和外观模式类的目的。
+
+示例如下：
+
+1. 新的子系统
+
+   ```java
+   public class CarEngineSystem {
+       public void madeEngine() {
+           System.out.println("制造了汽车引擎");
+       }
+   }
+   ```
+
+2. 抽象外观模式类
+
+   ```java
+   public abstract class AbsFacadeRole {
+       protected CarDoorSystem carDoorSystem;
+       protected CarStructSystem carStructSystem;
+       protected TireSystem tireSystem;
+
+       public AbsFacadeRole() {
+           carDoorSystem = new CarDoorSystem();
+           carStructSystem = new CarStructSystem();
+           tireSystem = new TireSystem();
+       }
+
+       public abstract void madeCar()  ;
+   }
+   ```
+
+3. 具体外观模式类
+
+   ```java
+   public class NewFacadeRole extends AbsFacadeRole {
+
+       private CarEngineSystem carEngineSystem;
+
+       public NewFacadeRole() {
+           super();
+           carEngineSystem = new CarEngineSystem();
+       }
+
+       @Override
+       public void madeCar() {
+           this.carDoorSystem.madeCarDoor();
+           this.carStructSystem.madeCarStruct();
+           this.tireSystem.madeTire();
+           this.carEngineSystem.madeEngine();
+           System.out.println("新的一辆车制造完成");
+       }
+   }
+   ```
+
+4. 客户端使用
+
+   ```java
+   public class NewFacadeClientUser {
+       public static void main(String[] args) {
+           /*面向抽象外观模式类编程，具体实现类对象可以通过配置文件和反射来获取*/
+           AbsFacadeRole facadeRole = new NewFacadeRole();
+           /*通过抽象外观模式类来调用同一入口方法*/
+           facadeRole.madeCar();
+       }
+   }
+   ```
+
 ## 什么情形下适用外观模式
 
 对于外观模式，可以抽象的理解为，在外观类中，通过组合各个子系统不同的类实现了一种特定类型的业务（比如实现了文件转换的功能），而这个业务会被很多地方使用到，这样组合起来会使得客户端在使用这种业务时调用很方便。这样看起来有点类似工具类的功能，实际上这也算是一种业务工具类吧。
