面试准备更新

--- a/Document/Markdown File/面试准备.md
+++ b/Document/Markdown File/面试准备.md
@@ -1081,6 +1081,8 @@ who；
 
 # 七、自我介绍 & 项目经验 
 
+
+
 八、关注什么新技术，有什么爱好
 
 阶段方向 ：多线程 并发 →JVM原理→ J2EE→ 项目经验
@@ -1284,3 +1286,12 @@ Java研发岗位
 有可能，你参加过大学生数学建模竞赛，“挑战杯”，机器人足球比赛等；
 
 也有可能，你在学校的时候作为骨干参与学生网站的建设和开发； 
+
+# 项目经验
+
+对照简历完善业务逻辑。
+
+提供过什么解决方案。
+
+业务如何保证事务。
+
