面试准备新增一些经验

--- a/Document/Markdown File/面试准备.md
+++ b/Document/Markdown File/面试准备.md
@@ -1295,3 +1295,57 @@ Java研发岗位
 
 业务如何保证事务。
 
+# 介绍项目
+
+1. 自我介绍
+
+   我叫高满意，从16年毕业加入恒生电子以来，一直从事Java后台开发的工作。主要负责的是交易银行产品的后台公共模块和供应链融资业务。使用的是tiny+Spring+Mybatis的框架，tiny是公司内部的框架，其实是类似于Spring的，可以理解为SSM框架。
+
+2. 最近熟悉的做过的项目介绍
+
+    入职恒生以来一直做得是交易银行产品公共模块，业务方面最熟悉的是近半年负责的供应链融资方面的后台开发。
+
+3. 对于Spring的了解？用过Spring哪些东西？
+
+   项目中用到过Spring 的Aop做过公共角色校验、日志打印等。使用Spring的IOC做过依赖注入。
+
+   - AOP的原理和使用
+
+     动态代理 jdk代理和cglib代理
+
+   - IOC的原理和使用
+
+     控制反转依赖注入
+
+   - Spring事务实现
+
+4. 多线程用过吗？
+
+   用过！
+
+5. Linux使用过么？
+
+   查看cpu运行命令 top命令
+
+   查找文件命令详见Linux操作培训
+
+6. 对应用服务器了解嘛？
+
+   weblogic服务部署。
+
+7. 关于中间件使用
+
+   - Spring整合MongoDB
+
+   - 为什么使用MongoDB
+
+     因为MongoDB是面向文档的数据库，不是关系型数据库。这样可以获得更好的扩展性
+
+   - Tiny集成Redis客户端
+
+   - zookeeper实现了分布式流水和分布式锁
+
+   - RabbitMq实现消息队列
+
+   ​
+
