--- a/Document/Markdown File/面试准备.md
+++ b/Document/Markdown File/面试准备.md
@@ -1339,7 +1339,15 @@ Java研发岗位
 
    - 为什么使用MongoDB
 
-     因为MongoDB是面向文档的数据库，不是关系型数据库。这样可以获得更好的扩展性
+     因为MongoDB是面向文档的数据库，不是关系型数据库。它采用分布式部署，可以获得更好的扩展性。加入了MongoDB之后，可以将一部分数据转移到MongoDB上做中间存储，减轻数据库的压力。
+
+     将工作流数据当做内嵌数组存进MongoDB里，工作流流转过程中的状态数据不断变换，一次查询就可以将每次的变更数据都查询出来，非常的方便。
+
+     ​
+
+     MongoDB三大特性：灵活文档模型 + 高可用复制集 + 可扩展分片集群
+
+     应用不需要复杂的事务支持；新应用，需求会变，数据模型无法确定，想快速迭代开发。
 
    - Tiny集成Redis客户端
 
