文档编写完成

--- a/Document/Markdown File/面试准备.md
+++ b/Document/Markdown File/面试准备.md
@@ -1343,8 +1343,6 @@ Java研发岗位
 
      将工作流数据当做内嵌数组存进MongoDB里，工作流流转过程中的状态数据不断变换，一次查询就可以将每次的变更数据都查询出来，非常的方便。
 
-     ​
-
      MongoDB三大特性：灵活文档模型 + 高可用复制集 + 可扩展分片集群
 
      应用不需要复杂的事务支持；新应用，需求会变，数据模型无法确定，想快速迭代开发。
@@ -1356,4 +1354,13 @@ Java研发岗位
    - RabbitMq实现消息队列
 
    ​
+
+8. 使用过的设计模式
+
+   - 模板方法模式：业务模板
+   - 单例模式
+   - 命令模式：异步命令
+   - 工厂模式：Redis的FactoryBean工厂
+   - 代理模式：SpringAOP
+   - 观察者模式：RabbitMQ发布订阅
 
