--- a/Document/Markdown File/面试准备.md
+++ b/Document/Markdown File/面试准备.md
@@ -1364,3 +1364,8 @@ Java研发岗位
    - 代理模式：SpringAOP
    - 观察者模式：RabbitMQ发布订阅
 
+9. 线程池配置多少个线程合适？
+
+   - IO密集型任务：配置CPU核数*2（因为执行IO时大部分线程阻塞，不占用CPU，可以让CPU来执行更多的线程）
+   - CPU计算密集型任务：配置CPU核数+1（计算密集时，只能让CPU每个核都在工作，这样使得每个线程都在执行当中。）
+
