--- a/Document/Markdown File/面试准备.md
+++ b/Document/Markdown File/面试准备.md
@@ -1347,7 +1347,7 @@ Java研发岗位
 
      应用不需要复杂的事务支持；新应用，需求会变，数据模型无法确定，想快速迭代开发。
 
-   - Tiny集成Redis客户端
+   - Tiny集成Redis客户端 使用Jedis客户端操作 hset命令 操作hash类型数据
 
    - zookeeper实现了分布式流水和分布式锁
 
