--- a/Document/Markdown File/单例模式详解.md
+++ b/Document/Markdown File/单例模式详解.md
@@ -327,6 +327,12 @@ class Singleton {
 2. 序列化会破坏类的单例模式特性，可以通过在单例类中加入`readResolve()`方法来实现单例，或者使用枚举实现单例模式也可避免序列化带来的问题。 
 3. 饿汉式和枚举的实现方法本质上都是利用了类在加载过程的初始化来保证线程安全。
 
+## 为什么Spring中的单例模式bean 在一个类里初始化 再另一类里不生效？
+
+
+
+
+
 ## 参考文章
 
 [参考文章一](https://blog.csdn.net/cselmu9/article/details/51366946)
