泛型理解编辑修改

--- a/Document/Markdown File/深入理解泛型.md
+++ b/Document/Markdown File/深入理解泛型.md
@@ -280,12 +280,10 @@ public static <T extends Throwable> void doSomething(Class<T> t){
     } catch(IndexOutOfBounds e) {  
         ...
     }                           
-}
+
 ```
 
-
-
-## ？与T的区别
+## 7. ？与T的区别
 
 - 如果类型参数在方法声明中只出现一次，可以用通配符代替它。
 - 当一个泛型用来表达方法的两个参数之间的关系时，则需要应该使用T，如：
@@ -309,6 +307,14 @@ public static void printColl(ArrayList<T> al){
         }  
 }
 ```
+
+- 类型通配符表示一个未知的类型。
+
+  > `? super Apple`表示参数类型是`Apple`父类的泛型，可以往容器内写入，不能读取。因为可以用任意的下边界Apple及其子类来调用写入的方法；但是当读取的时候，并不能将父类转换为子类。
+  >
+  > `? extend Apple`表示参数类型是`Apple`子类的泛型，可以从容器中读取，不能写入。因为读取的方法可以转换为父类`Apple`，但是不能使用父类`Apple`来调用写入的方法。
+
+- **`List<Apple>`是原始类型`List`的子类**
 
 ## 为什么需要引入泛型
 
