--- a/Document/Markdown File/高满意_2年_Java开发岗_15656940326.md
+++ b/Document/Markdown File/高满意_2年_Java开发岗_15656940326.md
@@ -1,12 +1,12 @@
-# 高满意
-
 ---
 
-性别：男
+## 基本信息
 
-工作经验：2年
+个人信息：高满意   男  25岁
 
-教育经历：安徽大学（211） 本科  通信工程专业
+工作经验：4年的Java后台开发经验
+
+教育经历：安徽大学  本科  通信工程专业   英语通过CET-6
 
 手机号码：15656940326
 
@@ -17,7 +17,7 @@
 ## 开发技能：
 
 - 熟练掌握Java基础，熟悉分布式系统的应用和设计；
-- 熟练使用Tiny、Spring、Mybatis等框架；
+- 熟练使用Springboot、Spring、Mybatis等框架；
 - 使用过Zookeeper、Redis、RabbitMq、MongoDB等中间件，熟悉这些中间件的服务端集群部署操作；
 - 熟悉Oracle数据库，可以熟练使用SQL进行日常业务开发，掌握一定的SQL优化技术；
 - 熟练使用Junit+Jmokit单元测试框架；
@@ -25,13 +25,15 @@
 
 ---
 
-## 工作经历：
+## 工作和项目经历：
 
-2016年2月-至今：	恒生电子股份有限公司		银行财资管理产品部		Java开发工程师
+2016年2月-2018年4月：	恒生电子股份有限公司		银行财资管理产品部		Java开发工程师
 
----
 
-## 项目经历：
+
+
+
+2018年5月-2020年9月：    华锐金融技术                       实时风控部门                   高级Java开发工程师
 
 **2017年8月-至今：包商银行供应链金融服务平台** 
 
